
* The command-line tool "export" and 'export_files' in session ROOT
entries retrieve theory exports from the session build database.

* The command-line tools "isabelle server" and "isabelle client" provide
access to the Isabelle Server: it supports responsive session management
and concurrent use of theories, based on Isabelle/PIDE infrastructure.
See also the "system" manual.

* The command-line tool "isabelle update_comments" normalizes formal
comments in outer syntax as follows: \<comment> \<open>text\<close> (whith a single space to
approximate the appearance in document output). This is more specific
than former "isabelle update_cartouches -c": the latter tool option has
been discontinued.

* Session ROOT entry: empty 'document_files' means there is no document
for this session. There is no need to specify options [document = false]
anymore.

* The command-line tool "isabelle mkroot" now always produces a document
outline: its options have been adapted accordingly. INCOMPATIBILITY.

* The command-line tool "isabelle mkroot -I" initializes a Mercurial
repository for the generated session files.

* Linux and Windows/Cygwin is for x86_64 only. Old 32bit platform
support has been discontinued.

* Mac OS X 10.10 Yosemite is now the baseline version; Mavericks is no
longer supported.

* Java runtime is for x86_64 only. Corresponding Isabelle settings have
been renamed to ISABELLE_TOOL_JAVA_OPTIONS and JEDIT_JAVA_OPTIONS,
instead of former 32/64 variants. INCOMPATIBILITY.

* Old settings ISABELLE_PLATFORM and ISABELLE_WINDOWS_PLATFORM should be
phased out due to unclear preference of 32bit vs. 64bit architecture.
Explicit GNU bash expressions are now preferred, for example (with
quotes):

  #Posix executables (Unix or Cygwin), with preference for 64bit
  "${ISABELLE_PLATFORM64:-$ISABELLE_PLATFORM32}"

  #native Windows or Unix executables, with preference for 64bit